--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "560b04d5-01bb-4d46-ad79-61f526e7017a"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
