--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "front",
-  "version": "0.0.0",
+  "name": "orpheus-site",
+  "version": "0.2 .0",
+  "engines": {
+    "node": "v14.15.0",
+    "npm": "6.14.8"
+  },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "^11.2.9",
+    "@angular/compiler-cli": "^11.2.10",
     "@angular/animations": "~11.2.10",
     "@angular/common": "~11.2.10",
     "@angular/compiler": "~11.2.10",
@@ -21,14 +28,15 @@
     "@angular/router": "~11.2.10",
     "bootstrap": "^4.6.0",
     "chart.js": "^3.1.1",
+    "express": "^4.17.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.9",
-    "@angular/cli": "~11.2.9",
-    "@angular/compiler-cli": "~11.2.10",
+    "@angular/cli": "^11.2.9",
+    "@angular/compiler-cli": "^11.2.10",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
