--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "orpheus-site",
-  "version": "0.2 .0",
+  "version": "0.2.0",
   "engines": {
     "node": "v14.15.0",
     "npm": "6.14.8"
